--- a/templates/view_solutions.html
+++ b/templates/view_solutions.html
@@ -129,7 +129,7 @@
                         {% if assignment.description_text %}
                         <div>
                             <h5 class="text-sm font-medium text-gray-900 mb-2">Description:</h5>
-                            <p class="text-sm text-gray-700">{{ assignment.description_text }}</p>
+                            <div class="text-sm text-gray-700 latex-content" id="assignment-description-{{ assignment.id }}">{{ assignment.description_text }}</div>
                         </div>
                         {% endif %}
                         
