--- a/templates/base.html
+++ b/templates/base.html
@@ -234,6 +234,7 @@
             }
         });
     </script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     {% block scripts %}{% endblock %}
 </body>
