--- a/templates/view_solutions.html
+++ b/templates/view_solutions.html
@@ -14,6 +14,10 @@
         </div>
         <div class="flex space-x-3">
             {% if current_user.is_teacher %}
+            <a href="{{ url_for('submit_solutions_for_students', assignment_id=assignment.id) }}" 
+               class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">
+                <i class="fas fa-users mr-2"></i>Submit Solutions for Students
+            </a>
             <button onclick="showGraph()" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-info hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-info">
                 <i class="fas fa-project-diagram mr-2"></i>View Graph
             </button>
@@ -382,6 +386,9 @@ function highlightMultipleSubmissions(submissionUids) {
         .transition()
         .duration(200)
         .attr('opacity', 0);
+    
+    // Remove all HTML tooltips
+    d3.selectAll('.graph-tooltip').remove();
     
     // Get all unique nodes and links from all selected submissions
     const allPaths = submissionUids.map(uid => {
